Honour a payload hash pinned in a presigned URL
createCanonicalRequest wrote UNSIGNED-PAYLOAD on the payload line of
every presigned request, whatever the caller had signed there.  A URL
naming x-amz-content-sha256 among its signed headers to pin the body it
may upload -- the shape in the report -- therefore could not verify: the
signer had put the hash on that line and the proxy always put the token.

Which of the two a client writes depends on the signer.  The AWS SDK
presigner returns UNSIGNED-PAYLOAD from calculateContentHashPresign
whatever headers it signs, so a URL it produced verified before this
change and has to keep verifying; other signers write the hash.  Both
spellings are reachable only with the secret, so accepting either costs
nothing: try the pinned one, fall back to the token, refuse the rest as
before.

A hash worth signing is worth enforcing, since pinning it is what makes
the URL good for one body rather than any.  It arrives signed, so
checking it needs no buffering, unlike the header-authorized path, which
reads the whole payload to recompute a digest it was handed.
ChecksumValidatingInputStream does it as the body streams past and now
carries the error code to report, so a body that does not match answers
XAmzContentSHA256Mismatch instead of being stored.

Only a plain hex hash counts.  x-amz-content-sha256 also spells the
streaming tokens, and honouring one of those would verify a URL whose
aws-chunked body this path never decodes, turning a refused request into
a corrupt object.

That the report could not be settled from outside is the other half of
this change.  A mismatch answered Forbidden and nothing else, though a
wrong secret, a rewritten Host, a clock and a signed header the client
never repeated all arrive looking alike.  S3 returns the strings it
signed; so does the proxy now, naming outright any signed header the
request does not carry -- the likeliest cause, and one the canonical
request states only as a header line with nothing